# mlogging_cpp

./: CMakeLists.txt  MloggingConfig.h.in  README.md
include/server/: udp_server.hpp
src/: main.cpp  mlogging.cpp
src/server/: udp_server.cpp
